...
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/controlsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glasses_disconnected"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:id="@+id/cameraStatusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:text="@string/camera_idle"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

...
                    android:layout_marginStart="@dimen/control_item_spacing"
                    android:layout_weight="1"
                    android:text="@string/camera_source_android" />
            </RadioGroup>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/recoveryCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_section_spacing"
                android:visibility="gone"
                app:cardUseCompatPadding="true">

...
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/control_item_spacing"
                        android:textAppearance="?attr/textAppearanceBodySmall"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/reEnableCameraTestingButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/control_item_spacing"
                        android:text="@string/re_enable_camera_testing" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/enableCameraButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_section_spacing"
                android:text="@string/enable_camera" />

            <Button
                android:id="@+id/startPreviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:enabled="false"
                android:text="@string/start_preview" />

            <Button
                android:id="@+id/stopPreviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:enabled="false"
                android:text="@string/stop_preview" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/control_item_spacing"
                    android:text="@string/transparent_hud" />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/gemmaSubtitlesCheckbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/control_item_spacing"
                    android:text="@string/gemma_subtitles" />
            </LinearLayout>

            <TextView
                android:id="@+id/gemmaModelStatusText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:text="@string/gemma_model_not_configured"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <Button
                android:id="@+id/downloadGemmaModelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:text="@string/download_gemma_model" />

            <TextView
...
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/delete_clip" />
            </LinearLayout>

            <Button
                android:id="@+id/shareLogsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/control_item_spacing"
                android:text="@string/share_logs" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/previewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="@android:color/black"
        android:visibility="visible">

        <com.example.ar_control.preview.AspectRatioTextureView
            android:id="@+id/previewTextureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <com.example.ar_control.ui.preview.DetectionOverlayView
            android:id="@+id/detectionOverlayView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/gemmaSubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginStart="@dimen/control_screen_padding"
            android:layout_marginEnd="@dimen/control_screen_padding"
            android:layout_marginBottom="@dimen/gemma_subtitle_margin_bottom"
...
            android:textColor="@android:color/white"
            android:textSize="@dimen/gemma_subtitle_text_size"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/previewBackButton"
            android:layout_width="@dimen/preview_back_button_size"
            android:layout_height="@dimen/preview_back_button_size"
            android:layout_gravity="top|start"
            android:layout_margin="@dimen/preview_back_button_margin"
            android:background="@drawable/bg_preview_back_button"
            android:clickable="true"
...
